# sfg

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TiledTest.tiled-session  sfg.xml
Animator/: CMakeLists.txt
Animator/include/: Animation.hpp  Animator.hpp  Flipbook.hpp  Frame.hpp
Animator/src/: Animation.cpp  Animator.cpp  Flipbook.cpp  Frame.cpp
App/: CMakeLists.txt
App/include/: App.hpp  Player.hpp  TestScene.hpp
App/src/: App.cpp  TestScene.cpp  main.cpp
Level/: CMakeLists.txt
Level/include/: Background.hpp  GroupLayer.hpp  ImageLayer.hpp  InfScroller.hpp  Layer.hpp  Level.hpp  Map.hpp  MapParser.hpp  Object.hpp  ObjectsLayer.hpp  TileSet.hpp  TilesLayer.hpp  Utils.hpp
Level/src/: Background.cpp  InfScroller.cpp  Level.cpp  MapParser.cpp  ObjectsLayer.cpp  Utils.cpp
Physics/: CMakeLists.txt
Physics/include/: DebugDraw.hpp  Objects.hpp  PhysicsUtils.hpp
Physics/src/: Objects.cpp  PhysicsUtils.cpp
SceneManager/: CMakeLists.txt
SceneManager/include/: IScene.hpp  SceneManager.hpp  SceneManagerDestroyer.hpp
SceneManager/src/: SceneManager.cpp  SceneManagerDestroyer.cpp
TestSF/: CMakeLists.txt
TestSF/include/: DebugDraw.hpp  PhysicsUtils.hpp  tmain.hpp
TestSF/src/: DebugDraw.cpp  Rotation_main.cpp  b2Test.cpp  main.cpp
imgui-sfml-2.5/: imgui-SFML.cpp
include/: app.hpp
include/Core/: SceneManager.hpp  Utils.hpp
include/Core/Animation/: Animation.hpp  AnimationSF.hpp  Animator.hpp  Animator.inl  Flipbook.hpp  Frame.hpp
include/Core/Interfaces/: IAnimation.hpp  IScene.hpp
include/Game/: Player.hpp
include/Game/Interfaces/: IObject.hpp
include/Scenes/: TestScene.hpp
resources/: map1..lua  tileset1..lua
resources/Maps/: map1.tmx  map2.tmx  map3.tmx
resources/Tilesets/: tileset1.tsx
resources/image/elf/: anim_wip.psd  anim_wip2.psd  elf_single_frame_1x1.psd
resources/image/parallax bg/PSD/: magic-cliffs.psd
src/: CMakeLists.txt  app.cpp  main.cpp
src/Core/: SceneManager.cpp  Utils.cpp
src/Core/Animation/: Animation.cpp  AnimationSF.cpp  Animator.cpp  Flipbook.cpp  Frame.cpp
src/Core/Utils/: Utils.cpp
src/Scenes/: TestScene.cpp
src/imgui/: imgui-SFML.cpp
